2004-04-30  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (search_instance): new function to search
	individual instances in the model.
	(e_cal_view_objects_modified_cb): use the above function.

2004-04-30  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (e_cal_view_objects_modified_cb): deal separately
	with master objects and recurring instances, so that notifications
	are sent correctly.

2004-04-30  Not Zed  <NotZed@Ximian.com>

	* gui/dialogs/meeting-page.c (get_widgets): make the entry
	non-editable.  Quick fix for #48132 (could convert to optionmenu
	but then we need to change again for gnome >?2.6).

2004-04-29  Rodney Dawes  <dobey@ximian.com>

	* gui/dialogs/cal-prefs-dialog.glade: Update the prefs dialog pages
	for the calendar and tasks components to be HIG compliant
                                                                               
2004-04-29  JP Rosevear  <jpr@ximian.com>

	* gui/tasks-component.h (tasks_component_peek_source_list): remove
	prototypes

	* gui/tasks-component.c (source_removed_cb):  unselect the
	source in the selector if source removed from calendar
	(create_component_view): create the activity handler and listen to
	source remove signal

	* gui/gnome-cal.h: add signals, protos

	* gui/gnome-cal.c (gnome_calendar_class_init): add source added
	and removed signals
	(client_cal_opened_cb): emit source removed signal
	(open_ecal): set the status message
	(backend_died_cb): emit source removed signal
	(gnome_calendar_set_activity_handler): allow an activity handler
	to be set
	(gnome_calendar_add_source): emit source added signal
	(gnome_calendar_remove_source): emit source removed signal
	(display_view): update the active activity handler

	* gui/e-tasks.h: add signal prototypes

	* gui/e-tasks.c (e_tasks_class_init): add source added and removed
	signals
	(backend_died_cb): emit source removed signal
	(e_tasks_add_todo_source): emit source added/removed signals