@@ -1,5 +1,10 @@
 2004-04-30  Rodrigo Moya <rodrigo@ximian.com>
 
+	* gui/e-cal-model.c (e_cal_view_objects_modified_cb): signal correctly
+	the pre-changes on the ETableModel.
+
+2004-04-30  Rodrigo Moya <rodrigo@ximian.com>
+
 	* gui/e-cal-model.c (search_instance): new function to search
 	individual instances in the model.
 	(e_cal_view_objects_modified_cb): use the above function.
